# makerforge

./: .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml  pyproject.toml
src/infrastructure/: ioc.py
src/makerforge/: __init__.py  cli.py  settings.py
src/makerforge/errors/: pydantic_utils.py
src/makerforge/exchanges/binance/sub/: settings.py
src/makerforge/exchanges/coinmate/: settings.py
src/makerforge/exchanges/coinmate/sub/: connectors.py  models.py
src/makerforge/services/: ingest.py  protocols.py
src/makerforge/storage/: redis_streams.py
tests/: test_random.py
